--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -46,8 +46,7 @@
                         AlternatingRowBackground="{StaticResource {x:Static SystemColors.ControlLightBrushKey}}" 
                         VerticalAlignment="Stretch">
                     </DataGrid>
-                    <Button Content="Добавить"
-                        Grid.Column="0" Grid.Row="2" Height="23" HorizontalAlignment="Left" Name="add_e_v" VerticalAlignment="Bottom" Width="75"/>
+                    <Button Content="Добавить" Grid.Column="0" Grid.Row="2" Height="23" HorizontalAlignment="Left" Name="add_e_v" VerticalAlignment="Bottom" Width="75" Click="add_e_v_Click" />
                     <Label Content="Возможности" Grid.RowSpan="2" Height="28" HorizontalAlignment="Center" Name="label1" VerticalAlignment="Top" />
                     <Label Content="Угрозы" Grid.Column="1" Grid.RowSpan="2" Height="28" HorizontalAlignment="Center" Name="label2" VerticalAlignment="Top" />
                     <DataGrid 
@@ -62,7 +61,7 @@
                         >
                     </DataGrid>
                     <Button Content="Добавить"
-                        Grid.Column="1" Grid.Row="2" Height="23" HorizontalAlignment="Left" Name="add_e_u" VerticalAlignment="Bottom" Width="75"/>
+                        Grid.Column="1" Grid.Row="2" Height="23" HorizontalAlignment="Left" Name="add_e_u" VerticalAlignment="Bottom" Width="75" Click="add_e_u_Click" />
                 </Grid>
             </TabItem>
                 <TabItem Header="Политические показатели">
@@ -73,40 +72,38 @@
                             <RowDefinition Height="30"></RowDefinition>
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition></ColumnDefinition>
-                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition Width="376"></ColumnDefinition>
+                        <ColumnDefinition Width="58" />
+                        <ColumnDefinition Width="434*"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
                         <DataGrid 
                         AutoGenerateColumns="True" 
                         Name="DG_p_v" 
                         DataContext="{Binding ElementName=dataGrid1}" 
-                        ItemsSource="{Binding}" Grid.Row="1"
-                        Grid.Column="0"
-                        AlternatingRowBackground="{StaticResource {x:Static SystemColors.ControlLightBrushKey}}" 
-                        VerticalAlignment="Stretch">
+                        ItemsSource="{Binding}" Grid.Row="1" AlternatingRowBackground="{StaticResource {x:Static SystemColors.ControlLightBrushKey}}" 
+                        VerticalAlignment="Stretch" Grid.ColumnSpan="2">
                         </DataGrid>
-                    <Button Content="Добавить"
-                        Grid.Column="0" Grid.Row="2" Height="23" HorizontalAlignment="Left" Name="add_p_v" VerticalAlignment="Bottom" Width="75"/>
-                        <Label Content="Возможности" Grid.RowSpan="2" Height="28" HorizontalAlignment="Center" Name="label3" VerticalAlignment="Top" />
-                        <Label Content="Угрозы" Grid.Column="1" Grid.RowSpan="2" Height="28" HorizontalAlignment="Center" Name="label4" VerticalAlignment="Top" />
+                    <Button Content="Добавить" Grid.Row="2" Height="23" HorizontalAlignment="Left" Name="add_p_v" VerticalAlignment="Bottom" Width="75" Click="add_p_v_Click" />
+                        <Label Content="Возможности" Height="28" HorizontalAlignment="Center" Name="label3" VerticalAlignment="Top" Margin="174,0,116,0" />
+                        <Label Content="Угрозы" Grid.Column="2" Height="28" HorizontalAlignment="Center" Name="label4" VerticalAlignment="Top" />
                         <DataGrid 
                         AutoGenerateColumns="True" 
                         Name="DG_p_u" 
                         DataContext="{Binding ElementName=dataGrid1}" 
                         ItemsSource="{Binding}" 
                         Grid.Row="1"
-                        Grid.Column="1"
+                        Grid.Column="2"
                         AlternatingRowBackground="{StaticResource {x:Static SystemColors.ControlLightBrushKey}}" VerticalAlignment="Stretch">
                         </DataGrid>
                     <Button 
 						Content="Добавить"
-                        Grid.Column="1"
+                        Grid.Column="2"
 						Grid.Row="2" 
 						Height="23" 
 						HorizontalAlignment="Left" 
 						Name="add_p_u" 
 						VerticalAlignment="Bottom" 
-						Width="75"/>
+						Width="75" Click="add_p_u_Click" />
                     </Grid>
                 </TabItem>
                     <TabItem Header="Технические показатели">
@@ -130,7 +127,7 @@
                         VerticalAlignment="Stretch">
                             </DataGrid>
                     <Button Content="Добавить"
-                        Grid.Column="0" Grid.Row="2" Height="23" HorizontalAlignment="Left" Name="add_t_v" VerticalAlignment="Bottom" Width="75"/>
+                        Grid.Column="0" Grid.Row="2" Height="23" HorizontalAlignment="Left" Name="add_t_v" VerticalAlignment="Bottom" Width="75" Click="add_t_v_Click" />
                             <Label Content="Возможности" Grid.RowSpan="2" Height="28" HorizontalAlignment="Center" Name="label5" VerticalAlignment="Top" />
                             <Label Content="Угрозы" Grid.Column="1" Grid.RowSpan="2" Height="28" HorizontalAlignment="Center" Name="label6" VerticalAlignment="Top" />
                             <DataGrid 
@@ -143,7 +140,7 @@
                         AlternatingRowBackground="{StaticResource {x:Static SystemColors.ControlLightBrushKey}}" VerticalAlignment="Stretch">
                             </DataGrid>
                     <Button Content="Добавить"
-                        Grid.Column="1" Grid.Row="2" Height="23" HorizontalAlignment="Left" Name="add_t_u" VerticalAlignment="Bottom" Width="75"/>
+                        Grid.Column="1" Grid.Row="2" Height="23" HorizontalAlignment="Left" Name="add_t_u" VerticalAlignment="Bottom" Width="75" Click="add_t_u_Click" />
                         </Grid>
                     </TabItem>
                         <TabItem Header="Социальные показатели">
@@ -167,7 +164,7 @@
                         VerticalAlignment="Stretch">
                                 </DataGrid>
                     <Button Content="Добавить"
-                        Grid.Column="0" Grid.Row="2" Height="23" HorizontalAlignment="Left" Name="add_s_v" VerticalAlignment="Bottom" Width="75"/>
+                        Grid.Column="0" Grid.Row="2" Height="23" HorizontalAlignment="Left" Name="add_s_v" VerticalAlignment="Bottom" Width="75" Click="add_s_v_Click" />
                                 <Label Content="Возможности" Grid.RowSpan="2" Height="28" HorizontalAlignment="Center" Name="label7" VerticalAlignment="Top" />
                                 <Label Content="Угрозы" Grid.Column="1" Grid.RowSpan="2" Height="28" HorizontalAlignment="Center" Name="label8" VerticalAlignment="Top" />
                                 <DataGrid 
@@ -180,7 +177,7 @@
                         AlternatingRowBackground="{StaticResource {x:Static SystemColors.ControlLightBrushKey}}" VerticalAlignment="Stretch">
                                 </DataGrid>
                     <Button Content="Добавить"
-                        Grid.Column="1" Grid.Row="2" Height="23" HorizontalAlignment="Left" Name="add_s_u" VerticalAlignment="Bottom" Width="75"/>
+                        Grid.Column="1" Grid.Row="2" Height="23" HorizontalAlignment="Left" Name="add_s_u" VerticalAlignment="Bottom" Width="75" Click="add_s_u_Click" />
                             </Grid>
                         </TabItem>
                         <TabItem Header="Организационная структура" IsEnabled="True">
